--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -57,7 +57,7 @@
     <%= render "shared/rec_games" %>
   
     <% unless params[:fr] %>
-      <%= render "shared/ad_bottom" %>
+      <%= render "shared/ad_google" %>
     <% end %>"
 
     <%= render "shared/analysis" %>
