update for update document add pv for materials list

--- a/app/views/api/welcome/document.html.erb
+++ b/app/views/api/welcome/document.html.erb
@@ -86,19 +86,20 @@
             "page":1,
             "more_page":15,
             "materials":[
-            {"id":455,"title":"11111111222","wx_url":"","wx_tlimg":"111111112222"},
-            {"id":453,"title":"11111111","wx_url":"","wx_tlimg":"11111111"},
-            {"id":445,"title":"五道IQ测试题，看你是不是天才","wx_url":"http://203.195.191.203/materials/445","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/tiancai/1.jpg"},
-            {"id":442,"title":"吉普赛人古老的神奇读心术，它能感应出你的内心在想什么，你敢试吗？","wx_url":"http://203.195.191.203/materials/442","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/duxin/dx.jpg"},
-            {"id":441,"title":"测一测你内心的阴暗面！","wx_url":"http://203.195.191.203/materials/441","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/shenjia/9.jpg"},
-            {"id":440,"title":"测一测：恋爱中你是花痴吗？","wx_url":"http://203.195.191.203/materials/440","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/huachi/1.jpg"},
-            {"id":439,"title":"测试：你多久会厌倦一个人？","wx_url":"http://203.195.191.203/materials/439","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/haose/12.jpg"},
-            {"id":438,"title":"测你做什么工作能赚大钱？","wx_url":"http://203.195.191.203/materials/438","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/gongzuo/gz1.jpg"},
-            {"id":437,"title":"丹麦最新智商测试1","wx_url":"http://203.195.191.203/materials/437","wx_tlimg":"http://wxcover.qiniudn.com/iqceshi.jpg"},
-            {"id":436,"title":"【心理年龄测试】测测你的心理年龄有几岁？","wx_url":"http://203.195.191.203/materials/436","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/nvxia/xl1.jpg"},
-            {"id":435,"title":"测测你的情商是否能打败小三？敢玩儿吗？","wx_url":"http://203.195.191.203/materials/435","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/douxiaosan/1.jpg"},
-            {"id":426,"title":"测测看你缺什么?","wx_url":"http://203.195.191.203/materials/426","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/que/3.jpg"}
-          ]}
+                {"id":368,"title":"测测看你是哪位神仙的转世？","wx_url":"http://203.195.191.203/materials/368","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/shenxian/8.jpg","hot":2136477},
+                {"id":426,"title":"测测看你缺什么?","wx_url":"http://203.195.191.203/materials/426","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/que/3.jpg","hot":2100045},
+                {"id":394,"title":"测测你的神经病程度！","wx_url":"http://203.195.191.203/materials/394","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/sjb/3.jpg","hot":992045},
+                {"id":213,"title":"测测你十年后会变成哪种女人？","wx_url":"http://203.195.191.203/materials/235","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/shinian/3.jpg","hot":926309},
+                {"id":389,"title":"测测看你有什么弱点？","wx_url":"http://203.195.191.203/materials/402","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/shenxian/7.jpg","hot":692628},
+                {"id":399,"title":"测测你是哪种类型的人","wx_url":"http://203.195.191.203/materials/399","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/neixing/nx3.jpg","hot":570734},
+                {"id":256,"title":"2048 明星版，你可以玩到都敏郡吗？","wx_url":"http://203.195.191.203/materials/256","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/2048/2048.jpg","hot":558275},
+                {"id":275,"title":"测测你下半生有哪种幸运的好命？","wx_url":"http://203.195.191.203/materials/282","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/haoming/hm5.jpg","hot":535371},
+                {"id":359,"title":"测测你这辈子会因为什么而发财？","wx_url":"http://203.195.191.203/materials/359","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/facai/3.jpg","hot":527563},
+                {"id":318,"title":"姓名凶吉鉴定","wx_url":"http://203.195.191.203/materials/330","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/xingming/xm16.jpg","hot":435811},
+                {"id":358,"title":"测测你这辈子能赚多少钱","wx_url":"http://203.195.191.203/materials/358","wx_tlimg":"http://1251008728.cdn.myqcloud.com/1251008728/qian/zq18.jpg","hot":334824},
+                {"id":392,"title":"你在古代长什么样子呢？ ","wx_url":"http://203.195.191.203/materials/392","wx_tlimg":"http://wxcover.qiniudn.com/gudai.jpg","hot":332034}
+            ]
+          }
         </code>
       </pre>
     </div>
