--- a/app/views/api/welcome/document.html.erb
+++ b/app/views/api/welcome/document.html.erb
@@ -74,6 +74,7 @@
         per_page: 每页多少 可不传 默认12
         order: 排序 hot, recommend
         game_type_id: 分类
+        recommend: 推荐游戏 value 1,2,3
       </code>
     </pre>
     </div>
