--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -39,6 +39,8 @@
     </head>
     <% unless params[:fr] %>
       <%= render "shared/ad" %>
+    <% else %>
+      <%= render "shared/ad_google" %>
     <% end %>
 
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
