--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -6,7 +6,7 @@
       <title><%= @material.name %></title>
       <% @answers = @material.answers %>
       <meta charset="utf-8">
-      <script src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/jquery.js"></script>
+      <script src="http://wxfile.youxiyule.com/js/jquery.min.js"></script>
       <script>  
         function click_ad(idx){
           ajax = new XMLHttpRequest();
