--- a/app/views/shared/_report.html.erb
+++ b/app/views/shared/_report.html.erb
@@ -1,5 +1,5 @@
 <script>
-  var url="/materials/stat?type=<%= type %>&cid=<%= cid %>&gid=<%= gid %>"
+  var url="/weitest/stat?type=<%= type %>&cid=<%= cid %>&gid=<%= gid %>"
   var img = new Image();
   img.src = url;
 </script>
