--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -49,7 +49,8 @@
     <br/> 
     
     <%= render "shared/ad_bottom" %>
-    
+    <%= render "shared/rec_games" %>
+ 
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
 </html>
