--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
+<h1>微信转盘 - 万万没想到 </h1>
+
 <div id="content" class="container_12 grid_10 push_5">
-  <% @materials.each do |material| %>
+ <% @materials.each do |material| %>
     <div class="grid_4 alpha1">
       <div class="post-<%= material.id %> post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
