--- a/app/views/shared/_ad.html.erb
+++ b/app/views/shared/_ad.html.erb
@@ -1,4 +1,4 @@
-<div class="flexslider"   style="margin:0px auto;text-align:center; width:650px;margin-top:-10px;" >
+<div class="flexslider"   style="margin:0px auto; width:650px;" >
   <div class="holder" style="clear:both;"></div>
   <ul class="slides" style="list-style:none; width:95%;">
     <script>
