--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -2,16 +2,17 @@
   <thead>
     <tr class="well">
       <th>序号</th>
-      <th width="5%">名称</th>
+      <th width="15%">名称</th>
       <th>人气</th>
       <th>微信好友分享</th>
       <th>朋友圈分享</th>
+      <th width="15%">转发统计</th>
       <th>微信链接</th>
       <th width="5%">状态</th>
       <th width="15%">分类</th>
       <th width="5%">类型</th>
-      <th width="17%">创建时间</th>
-      <th width="18%">操作</th>
+      <th width="10%">创建时间</th>
+      <th width="15%">操作</th>
       <th width="10%">QQ空间</th>
     </tr>
   </thead>
@@ -27,6 +28,7 @@
         <td><%= c.pv %></td>
         <td><%= c.share_count("hy") %></td>
         <td><%= c.share_count("pyq") %></td>
+        <td><%= c.wx_share_stat %></td>
         <td><%= c.wx_share_id unless c.wx_url.blank? %></td>
         <td> 
           <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
