--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -23,6 +23,14 @@
       <%= f.text_area :title, style: "width:200px", required: true %> 
     </div>
   </div>
+  
+  <div class="control-group">
+    <label class="control-label" style="width:100px"><strong>权重:</strong></label>
+    <div class="controls" style="margin:0 30px 0 110px">
+      <%= f.number_field :weight, min: -1, style: "width:200px" %>
+      <span class="help-block">小于零不出现，大于零权重增加</span>
+    </div>
+  </div>
 
     <div class="control-group">
       <label class="control-label" style="width:100px"><strong>分数范围:</strong></label>
