--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -39,7 +39,7 @@
         <%= ERB.new(@category.css).result(binding).html_safe %>
       </style>
     </head>
-    <%= render "shared/ad_head" %>
+    <%= render "shared/ad" %>
 
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
@@ -48,7 +48,7 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    <%= render "shared/ad" %>
+    <%= render "shared/ad_bottom" %>
     <%= render "shared/rec_games" %>
 
     <%-#= render "shared/ad_head" %>
