--- a/app/views/admin/materials/index.html.erb
+++ b/app/views/admin/materials/index.html.erb
@@ -28,7 +28,7 @@
         <td><%= c.pv %></td>
         <td><%= c.share_count("hy") %></td>
         <td><%= c.share_count("pyq") %></td>
-        <td><%= c.wx_share_stat %></td>
+        <td><%= c.wx_share_stat.html_safe %></td>
         <td><%= c.wx_share_id unless c.wx_url.blank? %></td>
         <td> 
           <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
