update ad config

--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -51,7 +51,7 @@
     <%= render "shared/ad_bottom" %>
     <%= render "shared/rec_games" %>
 
-    <%-#= render "shared/ad_head" %>
+    <%= render "shared/ad_bottom" %>
  
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
