--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -37,7 +37,7 @@
         <%= ERB.new(@category.css).result(binding).html_safe %>
       </style>
     </head>
-    <%= render "shared/ad_bottom" %>
+    <%= render "shared/ad" %>
 
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
@@ -50,7 +50,8 @@
     
     <%= render "shared/ad_bottom" %>
     <%= render "shared/rec_games" %>   
- 
+    <%= render "shared/ad_bottom" %>
+
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
 </html>
