--- a/app/views/shared/_rec_games.html.erb
+++ b/app/views/shared/_rec_games.html.erb
@@ -5,6 +5,7 @@
     </div>
     <% @games = Material.recommended_games(3, @material.id)  %>
     <% @games.each do |game| %>
+      <% next if game.id == @material.id  %>
       <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
         <a href="/weitest/<%= game.url %>" style="color:#00c205; text-decoration:none; ">
           <%= game.name %>
