--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -39,7 +39,7 @@
         <%= ERB.new(@category.css).result(binding).html_safe %>
       </style>
     </head>
-    <%= render "shared/ad_bottom" %>
+    <%= render "shared/ad" %>
 
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
@@ -50,7 +50,7 @@
     <%= ERB.new(@category.html).result(binding).html_safe %>
     <%= render "shared/ad_bottom" %>
     <%= render "shared/rec_games" %>
-    <%= render "shared/ad_mid" %>
+    <%= render "shared/ad_bottom" %>
  
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
