--- a/app/views/shared/_rec_games.html.erb
+++ b/app/views/shared/_rec_games.html.erb
@@ -1,13 +1,12 @@
 <div class="rec_games" style="margin:0px auto;text-align:center; width:97%;white-space:nowrap; line-height:42px; min-height:230px; border-bottom:none; ">
   <div class="rec_holder" style="clear:both;">
-    <div class="game_header" style="float:left; font-size:24px; height:30px; margin:4px auto; color:#999; ">
+    <div class="game_header" style="font-size:24px; height:30px; margin:4px auto; color:#999; ">
       【微信游戏推荐】
     </div>
     <% @games = Material.recommended_games(3, @material.id)  %>
     <% @games.each do |game| %>
-      <% next if game.id == @material.id  %>
       <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
-        <a href="/weitest/<%= game.url %>" ">
+        <a href="/materials/<%= game.url %>?by=brec" style="text-decoration:none; ">
           <%= game.name %>
         </a>
       </div>
