--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h2>微信转盘 - 万万没想到 </h2>
+<h2>微信转盘 - 万万没想到 上街吧 玩会儿 </h2>
 
 <div id="content" class="container_12 grid_10 push_5">
  <% @materials.each do |material| %>
@@ -6,7 +6,7 @@
       <div class="post-<%= material.id %> post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
           <%= link_to material do %>
-            <%= image_tag material.wx_tlimg, style: "width:100%;  margin-bottom:-3px;" %>
+            <%= image_tag material.wx_tlimg, style: "width:640px; heigth:500px;  margin-bottom:-3px;" %>
           <% end %>
         </div>
       </div>
