--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>玩会儿 - 微游戏, 微信游戏, 微信刮刮卡 </title>
+    <title>微转盘 - 万万没想到 微信转盘 搞搞吧 上街吧 玩会儿 </title>
     <%= favicon_link_tag 'shangjieba-icon.png' %>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="keywords" content="玩会儿,微信测试,微信游戏,微测试,微游戏,小游戏,名字,唐朝,刮刮卡,转盘">
-    <meta name="description" content="玩会儿,微信游戏,微信测试"> 
+    <meta name="keywords" content="玩会儿,微信测试,微信游戏,微测试,微游戏,小游戏,万万没想到,上街吧,微信转盘">
+    <meta name="description" content="微信游戏,微信测试"> 
     <meta name="baidu-tc-cerfication" content="172a854e4a368f1373c63b8533a823c9" />
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= javascript_include_tag "application" %>
