--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link href="http://1251008728.cdn.myqcloud.com/1251008728/assets/images/wanhuir-icon.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
+      <link href="http://wei.qq275.com/vapp/shangjieba.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
       <% @category = @material.category %>
       <title><%= @material.name %></title>
       <% @answers = @material.answers %>
