--- a/app/views/shared/_ad_bottom.html.erb
+++ b/app/views/shared/_ad_bottom.html.erb
@@ -1,4 +1,4 @@
-<div style=" background:#fff;  " align="center" id="bai">
+<div style=" background:#fff;  " align="center" id="bai" class="bai">
   <div style="display: inline; text-align: center;">
     <% @ads = Ad.where(:on => true).where( :t=> 2 ) %>
     <% @ads.each do |ad| %>
