--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -53,5 +53,8 @@
     <%= render "shared/ad_bottom" %>
  
     <%= render "shared/analysis" %>
+   
+    <% if @is_stat %>   
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
+    <% end %>
 </html>
