--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title> 微转盘 - 万万没想到 微信转盘 搞搞吧 上街吧 玩会儿 </title>
+<title> 微转盘 - 万万没想到 搞搞吧 上街吧 玩会儿 微信转盘 </title>
 <%= javascript_include_tag "application" %>
 <style type="text/css">
 body, div, img, h1, h2, h3, h4, h5, h6 { padding:0px; margin:0px; }
