--- a/app/views/shared/_ad1.html.erb
+++ b/app/views/shared/_ad1.html.erb
@@ -2,7 +2,7 @@
   <div class="holder" style="clear:both;"></div>
   <ul class="slides" style="list-style:none; width:95%;">
     <li style="float:left; margin-left:2px; width:90%; ">
-      <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f" > <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/banner.png" /> </a>
+      <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f" > <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head.png" /> </a>
     </li>
   </ul>
   <div class="holder" style="clear:both;"></div>
