--- a/app/views/shared/_rec_games.html.erb
+++ b/app/views/shared/_rec_games.html.erb
@@ -3,7 +3,14 @@
     <div class="game_header" style="font-size:24px; height:30px; margin:4px auto; color:#999; ">
       【微信游戏推荐】
     </div>
-    <% @games = Material.recommended_games(3, @material.id)  %>
+    
+    <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
+        <a href="http://51self.com?f=r" style="text-decoration:none; ">
+         更多免费微信游戏！
+        </a>
+    </div>
+
+    <% @games = Material.recommended_games(2, @material.id)  %>
     <% @games.each do |game| %>
       <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
         <a href="/weitest/<%= game.url %>?f=r" style="text-decoration:none; ">
