--- a/app/views/shared/_ad1.html.erb
+++ b/app/views/shared/_ad1.html.erb
@@ -2,7 +2,7 @@
   <div class="holder" style="clear:both;"></div>
   <ul class="slides" style="list-style:none; width:95%;">
     <li style="float:left; margin-left:2px; width:90%; ">
-      <a href="http://wei.51self.com?f=head" > <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head1.png" /> </a>
+      <a href="http://mp.weixin.qq.com/s?__biz=MzA4NTkwNTIxOQ==&mid=201004496&idx=1&sn=c3dcb0820a5c3746991de7de63429fc8#rd" > <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head1.png" /> </a>
     </li>
   </ul>
   <div class="holder" style="clear:both;"></div>
