--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -39,9 +39,12 @@
     <% @html_image_2 = @material.images.select{|i| i.state == 13}[0].try(:body) %>
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
-    <%= render "shared/ad_bottom" %>
-    <%= render "shared/rec_games" %>
-    <%= render "shared/ad_bottom" %>
+    
+    <%unless  @material.game_type_id == 7%>
+      <%= render "shared/ad_bottom" %>
+      <%= render "shared/rec_games" %>
+      <%= render "shared/ad_bottom" %>
+    <% end %>
  
     <%= render "shared/analysis" %>
    
