--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -30,7 +30,9 @@
         <%= ERB.new(@category.css).result(binding).html_safe %>
       </style>
     </head>
-    <%= render "shared/ad1" %>
+    <%unless  @category.game_type_id == 7 %>
+      <%= render "shared/ad1" %>
+    end
 
     <% @prompt_image = @material.images.select{|i| i.state == 3 }[0].try(:body) %>
     <% @commit_btn   = @material.images.select{|i| i.state == 9 }[0].try(:body) %>
@@ -43,6 +45,8 @@
     <%unless  @category.game_type_id == 7 %>
       <%= render "shared/ad_bottom" %>
       <%= render "shared/rec_games" %>
+      <%= render "shared/ad_bottom" %>
+    <% else %>
       <%= render "shared/ad_bottom" %>
     <% end %>
  
