--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -47,7 +47,7 @@
       <%= render "shared/rec_games" %>
       <%= render "shared/ad_bottom" %>
     <% else %>
-      <%= render "shared/ad_bottom" %>
+      <%= render "shared/ad_bottom_h5" %>
     <% end %>
  
     <%= render "shared/analysis" %>
