--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -47,7 +47,9 @@
       <%= render "shared/rec_games" %>
       <%= render "shared/ad_bottom" %>
     <% else %>
-      <%= render "shared/ad_bottom_h5" %>
+      <% if @category.id != 255 %>
+        <%= render "shared/ad_bottom_h5" %>
+      <% end %>
     <% end %>
  
     <%= render "shared/analysis" %>
