--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -51,6 +51,8 @@
     <%= render "shared/ad_bottom" %>
     <%= render "shared/rec_games" %>   
     <%= render "shared/ad_bottom" %>
+    <%= render "shared/rec_h5_games" %>
+    <%= render "shared/ad_bottom" %>
 
     <%= render "shared/analysis" %>
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
