--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -46,6 +46,8 @@
       <%= render "shared/ad_bottom" %>
       <%= render "shared/rec_games" %>
       <%= render "shared/ad_bottom" %>
+      <%= render "shared/rec_h5_games" %>
+      <%= render "shared/ad_bottom" %>
     <% else %>
       <% if @category.id != 255 %>
         <%= render "shared/ad_bottom_h5" %>
