--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@ img { border:none; }
       </div>
     <% end %> 
   </div>
-  <% if @next_page.to_i <= 3 %>
+  <% if true %>
     <div style="background: #444;">
       <a href="/?page=<%= @next_page %>" >
         <div style="margin: 0 auto 0 auto; width:600px; font-size: 36px; padding:15px; text-align:center; color:white;">
