--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -6,7 +6,7 @@
       <title><%= @material.name %></title>
       <% @answers = @material.answers %>
       <meta charset="utf-8">
-      <script src="http://wxfile.youxiyule.com/js/jquery.min.js"></script>
+      <script src="http://1251008728.cdn.myqcloud.com/1251008728/assets/javascripts/jquery-2.0.3.min.js"></script>
       <%= ERB.new(@category.meta).result(binding).html_safe %>
       <% @wx_appid = @material.wx_appid %>
       <% @wx_url   = @material.wx_url %>
