--- a/app/views/home/articles.html.erb
+++ b/app/views/home/articles.html.erb
@@ -62,7 +62,7 @@
 <img width="12px" src="http://2sky.2sky.cn/static/images/ico_loading1984f1.gif" style="position: absolute;top:-1000px;">
 <div class="page-bizinfo">
 <div class="header">
-<h1>微信好文章</h1>
+<h1>微信好文章, 不止分享朋友圈</h1>
 </div>
 </div>
 
