add ad manage for jiedan

--- a/app/views/admin/ads/_form.html.erb
+++ b/app/views/admin/ads/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="control-group">
      <label class="control-label">广告类型</label>
      <div class="controls">
-       <%= f.select :t, [["顶部", 0], ["底部宽", 1],  ["底部长", 2], ["首页推荐", 3],  ["首页链接", 4], ["最底部", 5] ], style:"width:800px;height:100px" %>
+       <%= f.select :t, [["顶部", 0], ["底部宽", 1],  ["底部长", 2], ["首页推荐", 3],  ["首页链接", 4], ["最底部", 5], ["接单", 10] ], style:"width:800px;height:100px" %>
      </div>
   </div>
 
