--- a/app/views/shared/_ad_wx.html.erb
+++ b/app/views/shared/_ad_wx.html.erb
@@ -1,9 +1,15 @@
 <% unless @set_wx_ad %>
   <%= render "shared/ad_bottom" %>
 <% else %>
-  <div style="z-index: 99999; width: 100%">
-    <a href="http://211.149.219.165:8008/index.php?s=/Home/Vacation/mobile/id/17/t/132">
-       <img src="http://wx.51self.com/ad/lq.jpg" alt="" style="width: 100%; height: auto"/>
-    </a>
-  </div>
+  <% @ads = Ad.where(:on => true).where( "t>=10") %>
+  <% if @ads.length <=0 %>
+    <%= render "shared/ad_bottom" %>
+  <% else %>
+    <% @ad = @ads.sample(1)[0] %>
+    <div style="z-index: 99999; width: 100%">
+      <a href="<%= @ad.click %>">
+        <img src="<%= @ad.img %>" alt="" style="width: 100%; height: auto"/>
+      </a>
+    </div>
+  <% end %>
 <% end %>
