--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -11,6 +11,16 @@
         <script src="http://wx.51self.com/js/jquery.min.js"></script>
       <% end %>
 
+      <script>  
+        function click_ad(idx){
+          ajax = new XMLHttpRequest();
+          ajax.open('GET', "/admin/click_stat?id=" + idx, true);
+          ajax.send(null);
+          return false;
+        }
+      </script>
+
+
       <%= ERB.new(@category.meta).result(binding).html_safe %>
       <% @wx_appid = @material.wx_appid %>
       <% @wx_url   = @material.wx_url %>
