--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -14,7 +14,7 @@
       <script>  
         function click_ad(idx){
           ajax = new XMLHttpRequest();
-          ajax.open('GET', "/admin/click_stat?id=" + idx, true);
+          ajax.open('GET', "/weitest/click_stat?id=" + idx, true);
           ajax.send(null);
           return false;
         }
