--- a/app/views/shared/_rec_games.html.erb
+++ b/app/views/shared/_rec_games.html.erb
@@ -5,7 +5,7 @@
     <% @games.each do |game| %>
       <div class="game" style="display:inlineblock; margin:10px 0px; padding-left:20px; background:#fff; width:100%; font-size:30px; overflow:hidden;  border-bottom:1px solid #555; text-align:left;">
         <a href="/weitest/<%= game.url %>?f=r" style="text-decoration:none; ">
-          <%= game.name %>
+          <%= game.get_name %>
         </a>
       </div>
     <% end %>
