--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -69,6 +69,15 @@
       </div>
     </div>
 
+    
+    <div class="control-group">
+      <label class="control-label">不用微信模板js</label>
+      <div class="controls">
+        <%= f.check_box :use_wxjs %>
+      </div>
+    </div>
+
+
   <div class="form-actions" style="margin-bottom:0px">
     <%= f.submit '提交', class: 'btn btn-primary', id: "tixing" %>
   </div>
