--- a/app/views/shared/_ad1.html.erb
+++ b/app/views/shared/_ad1.html.erb
@@ -1,4 +1,4 @@
-<div class="flexslider"   style="margin:0px auto; width:650px; align:center;" >
+<div class="flexslider"   style="margin:0px auto; align:center;" >
       <a href="http://mp.weixin.qq.com/s?__biz=MjM5NjIzOTE2OQ==&mid=200366500&idx=1&sn=21c2832b5382e6aafd4e55a0d6c85f5f#rd" > <img style="width:100%; max-height:60px;" src="http://kaokao.qiniudn.com/head1.png" /> </a>
   <div class="holder" style="clear:both;"></div>
 </div>
