--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -26,7 +26,7 @@
   <div class="control-group">
     <label class="control-label">类别选择</label>
     <div class="controls">
-      <%= f.select :category_id, ::Category.all.collect {|p| [ p.name, p.id ] } %>
+      <%= f.select :category_id, [["无", 0]] + ::Category.all.collect {|p| [ p.name, p.id ] }%>
     </div>
   </div>
 
@@ -120,6 +120,18 @@
       </span>
     </div>
   </div>
+
+  <div class="control-group">
+    <label class="control-label">thumb</label>
+    <div class="controls">
+      <%= f.text_field :thumb,  class: "input-xxlarge" %>
+      <span class="help-block"><a href="<%= @material.thumb %>">图片预览</a> &nbsp;
+        size: <span id="material_size"></span>
+      </span>
+    </div>
+  </div>
+   
+
   <div class="control-group">
     <label class="control-label">标题</label>
     <div class="controls">
