--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
     <meta name="description" content="微信游戏,微信测试"> 
     <meta name="baidu-tc-cerfication" content="172a854e4a368f1373c63b8533a823c9" />
     <%= stylesheet_link_tag "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
+    <script src="http://wx.51self.com/js/app.js"></script>   
+  
     <%= csrf_meta_tags %>
     <style type="text/css">
       .recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;} 
